--- a/package.json
+++ b/package.json
@@ -11,5 +11,10 @@
   "bugs": {
     "url": "https://github.com/amanojeremie/censr/issues"
   },
-  "homepage": "https://github.com/amanojeremie/censr#readme"
+  "homepage": "https://github.com/amanojeremie/censr#readme",
+  "dependencies": {
+    "@google-cloud/speech": "^2.1.1",
+    "node-record-lpcm16": "^0.3.1",
+    "speaker": "^0.4.1"
+  }
 }
